// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleButton /> should render without a problem 1`] = `
.c1 {
  position: absolute;
  width: 0;
  opacity: 0;
}

.c2 {
  display: inline-block;
  position: relative;
  width: 3.2rem;
  height: 1.8rem;
  border-radius: 2.1rem;
  background: hsl(218,18%,91%);
  cursor: pointer;
  pointer-events: none;
}

.c2:before {
  content: '';
  display: block;
  position: absolute;
  top: 0.1rem;
  left: 0.2rem;
  cursor: pointer;
  height: 1.6rem;
  width: 1.6rem;
  border-radius: 1.6rem;
  background: hsl(0,100%,100%);
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.1),0 0 1px 0 rgba(0,0,0,0.1), 0 0 1px 0 rgba(0,0,0,0.1);
  -webkit-transition: -webkit-transform 250ms ease,width 250ms,left 250ms;
  -webkit-transition: transform 250ms ease,width 250ms,left 250ms;
  transition: transform 250ms ease,width 250ms,left 250ms;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.c2:active:before {
  width: 3rem;
  left: 6px;
}

.c0 {
  display: inline-block;
  position: relative;
  height: 1.8rem;
  vertical-align: middle;
  cursor: pointer;
}

<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "3.2rem",
          "bigInt": 3.2,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.2rem",
          "mediumInt": 1.2,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "alizarin": "hsl(6, 78%, 57%)",
        "anthracite": "hsl(213, 17%, 20%)",
        "black": "hsl(0, 0%, 0%)",
        "blackLight": "hsl(213, 17%, 20%)",
        "blue": "hsl(200, 74%, 46%)",
        "bodyBackground": "hsl(218, 29%, 95%)",
        "carrot": "hsl(28, 80%, 52%)",
        "clay": "hsl(215, 17%, 26%)",
        "darkBlue": "#1c88bf",
        "darkGray": "#dbdfe6",
        "darkGreen": "#7fbf3b",
        "darkRed": "#ea6151",
        "emerald": "hsl(145, 63%, 49%)",
        "fadeBlue": "hsl(210, 50%, 98%)",
        "failure": Object {
          "back": "hsl(6, 79%, 65%)",
          "darkBack": "#ea6151",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#f1978d",
          "lightFore": "#fff",
        },
        "googleBrandRed": "#ea4335",
        "gray": "hsl(218, 18%, 91%)",
        "green": "hsl(89, 53%, 52%)",
        "grey": "hsl(206, 16%, 60%)",
        "greygoose": "hsl(216, 29%, 97%)",
        "lightBlue": "#3baae2",
        "lightGray": "#fff",
        "lightGreen": "#a0d16b",
        "lightRed": "#f1978d",
        "marble": "hsl(206, 23%, 69%)",
        "orange": "hsl(34, 91%, 65%)",
        "primary": Object {
          "back": "hsl(200, 74%, 46%)",
          "darkBack": "#1c88bf",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#3baae2",
          "lightFore": "#fff",
        },
        "red": "hsl(6, 79%, 65%)",
        "river": "hsl(204, 70%, 53%)",
        "sand": "hsl(214, 8%, 84%)",
        "secondary": Object {
          "back": "hsl(0, 100%, 100%)",
          "darkBack": "#f7f7f7",
          "darkFore": "#8093a3",
          "fore": "hsl(206, 16%, 60%)",
          "lightBack": "#fff",
          "lightFore": "#a6b4be",
        },
        "success": Object {
          "back": "hsl(89, 53%, 52%)",
          "darkBack": "#7fbf3b",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#a0d16b",
          "lightFore": "#fff",
        },
        "turquoise": "hsl(168, 76%, 42%)",
        "white": "hsl(0, 100%, 100%)",
        "wisteria": "hsl(282, 44%, 47%)",
      },
    }
  }
>
  <Styled(ToggleButton)>
    <ToggleButton
      checked={false}
      className="c0"
      disabled={false}
      onToggle={null}
    >
      <div
        className="c0"
        onClick={[Function]}
      >
        <styled.input
          checked={false}
          readOnly={true}
          type="checkbox"
        >
          <input
            checked={false}
            className="c1"
            readOnly={true}
            type="checkbox"
          />
        </styled.input>
        <styled.span
          checked={false}
          readOnly={false}
        >
          <span
            checked={false}
            className="c2"
            readOnly={false}
          />
        </styled.span>
      </div>
    </ToggleButton>
  </Styled(ToggleButton)>
</ThemeProvider>
`;

exports[`<ToggleButton /> should render without a problem when checked and disabled 1`] = `
.c1 {
  position: absolute;
  width: 0;
  opacity: 0;
}

.c2 {
  display: inline-block;
  position: relative;
  width: 3.2rem;
  height: 1.8rem;
  border-radius: 2.1rem;
  background: hsl(200,74%,46%);
  cursor: pointer;
  pointer-events: none;
  opacity: 0.4;
}

.c2:before {
  content: '';
  display: block;
  position: absolute;
  top: 0.1rem;
  left: 0.2rem;
  cursor: pointer;
  height: 1.6rem;
  width: 1.6rem;
  border-radius: 1.6rem;
  background: hsl(0,100%,100%);
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.1),0 0 1px 0 rgba(0,0,0,0.1), 0 0 1px 0 rgba(0,0,0,0.1);
  -webkit-transition: -webkit-transform 250ms ease,width 250ms,left 250ms;
  -webkit-transition: transform 250ms ease,width 250ms,left 250ms;
  transition: transform 250ms ease,width 250ms,left 250ms;
  -webkit-transform: translateX(1.3rem);
  -ms-transform: translateX(1.3rem);
  transform: translateX(1.3rem);
}

.c0 {
  display: inline-block;
  position: relative;
  height: 1.8rem;
  vertical-align: middle;
  cursor: not-allowed;
}

<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "3.2rem",
          "bigInt": 3.2,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.2rem",
          "mediumInt": 1.2,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "alizarin": "hsl(6, 78%, 57%)",
        "anthracite": "hsl(213, 17%, 20%)",
        "black": "hsl(0, 0%, 0%)",
        "blackLight": "hsl(213, 17%, 20%)",
        "blue": "hsl(200, 74%, 46%)",
        "bodyBackground": "hsl(218, 29%, 95%)",
        "carrot": "hsl(28, 80%, 52%)",
        "clay": "hsl(215, 17%, 26%)",
        "darkBlue": "#1c88bf",
        "darkGray": "#dbdfe6",
        "darkGreen": "#7fbf3b",
        "darkRed": "#ea6151",
        "emerald": "hsl(145, 63%, 49%)",
        "fadeBlue": "hsl(210, 50%, 98%)",
        "failure": Object {
          "back": "hsl(6, 79%, 65%)",
          "darkBack": "#ea6151",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#f1978d",
          "lightFore": "#fff",
        },
        "googleBrandRed": "#ea4335",
        "gray": "hsl(218, 18%, 91%)",
        "green": "hsl(89, 53%, 52%)",
        "grey": "hsl(206, 16%, 60%)",
        "greygoose": "hsl(216, 29%, 97%)",
        "lightBlue": "#3baae2",
        "lightGray": "#fff",
        "lightGreen": "#a0d16b",
        "lightRed": "#f1978d",
        "marble": "hsl(206, 23%, 69%)",
        "orange": "hsl(34, 91%, 65%)",
        "primary": Object {
          "back": "hsl(200, 74%, 46%)",
          "darkBack": "#1c88bf",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#3baae2",
          "lightFore": "#fff",
        },
        "red": "hsl(6, 79%, 65%)",
        "river": "hsl(204, 70%, 53%)",
        "sand": "hsl(214, 8%, 84%)",
        "secondary": Object {
          "back": "hsl(0, 100%, 100%)",
          "darkBack": "#f7f7f7",
          "darkFore": "#8093a3",
          "fore": "hsl(206, 16%, 60%)",
          "lightBack": "#fff",
          "lightFore": "#a6b4be",
        },
        "success": Object {
          "back": "hsl(89, 53%, 52%)",
          "darkBack": "#7fbf3b",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#a0d16b",
          "lightFore": "#fff",
        },
        "turquoise": "hsl(168, 76%, 42%)",
        "white": "hsl(0, 100%, 100%)",
        "wisteria": "hsl(282, 44%, 47%)",
      },
    }
  }
>
  <Styled(ToggleButton)
    checked={true}
    disabled={true}
  >
    <ToggleButton
      checked={true}
      className="c0"
      disabled={true}
      onToggle={null}
    >
      <div
        className="c0"
        onClick={[Function]}
      >
        <styled.input
          checked={true}
          readOnly={true}
          type="checkbox"
        >
          <input
            checked={true}
            className="c1"
            readOnly={true}
            type="checkbox"
          />
        </styled.input>
        <styled.span
          checked={true}
          readOnly={true}
        >
          <span
            checked={true}
            className="c2"
            readOnly={true}
          />
        </styled.span>
      </div>
    </ToggleButton>
  </Styled(ToggleButton)>
</ThemeProvider>
`;

exports[`<ToggleButton /> should render without a problem when checked and not disabled 1`] = `
.c1 {
  position: absolute;
  width: 0;
  opacity: 0;
}

.c2 {
  display: inline-block;
  position: relative;
  width: 3.2rem;
  height: 1.8rem;
  border-radius: 2.1rem;
  background: hsl(200,74%,46%);
  cursor: pointer;
  pointer-events: none;
}

.c2:before {
  content: '';
  display: block;
  position: absolute;
  top: 0.1rem;
  left: 0.2rem;
  cursor: pointer;
  height: 1.6rem;
  width: 1.6rem;
  border-radius: 1.6rem;
  background: hsl(0,100%,100%);
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.1),0 0 1px 0 rgba(0,0,0,0.1), 0 0 1px 0 rgba(0,0,0,0.1);
  -webkit-transition: -webkit-transform 250ms ease,width 250ms,left 250ms;
  -webkit-transition: transform 250ms ease,width 250ms,left 250ms;
  transition: transform 250ms ease,width 250ms,left 250ms;
  -webkit-transform: translateX(1.3rem);
  -ms-transform: translateX(1.3rem);
  transform: translateX(1.3rem);
}

.c2:active:before {
  width: 3rem;
  left: 0;
}

.c0 {
  display: inline-block;
  position: relative;
  height: 1.8rem;
  vertical-align: middle;
  cursor: pointer;
}

<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "3.2rem",
          "bigInt": 3.2,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.2rem",
          "mediumInt": 1.2,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "alizarin": "hsl(6, 78%, 57%)",
        "anthracite": "hsl(213, 17%, 20%)",
        "black": "hsl(0, 0%, 0%)",
        "blackLight": "hsl(213, 17%, 20%)",
        "blue": "hsl(200, 74%, 46%)",
        "bodyBackground": "hsl(218, 29%, 95%)",
        "carrot": "hsl(28, 80%, 52%)",
        "clay": "hsl(215, 17%, 26%)",
        "darkBlue": "#1c88bf",
        "darkGray": "#dbdfe6",
        "darkGreen": "#7fbf3b",
        "darkRed": "#ea6151",
        "emerald": "hsl(145, 63%, 49%)",
        "fadeBlue": "hsl(210, 50%, 98%)",
        "failure": Object {
          "back": "hsl(6, 79%, 65%)",
          "darkBack": "#ea6151",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#f1978d",
          "lightFore": "#fff",
        },
        "googleBrandRed": "#ea4335",
        "gray": "hsl(218, 18%, 91%)",
        "green": "hsl(89, 53%, 52%)",
        "grey": "hsl(206, 16%, 60%)",
        "greygoose": "hsl(216, 29%, 97%)",
        "lightBlue": "#3baae2",
        "lightGray": "#fff",
        "lightGreen": "#a0d16b",
        "lightRed": "#f1978d",
        "marble": "hsl(206, 23%, 69%)",
        "orange": "hsl(34, 91%, 65%)",
        "primary": Object {
          "back": "hsl(200, 74%, 46%)",
          "darkBack": "#1c88bf",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#3baae2",
          "lightFore": "#fff",
        },
        "red": "hsl(6, 79%, 65%)",
        "river": "hsl(204, 70%, 53%)",
        "sand": "hsl(214, 8%, 84%)",
        "secondary": Object {
          "back": "hsl(0, 100%, 100%)",
          "darkBack": "#f7f7f7",
          "darkFore": "#8093a3",
          "fore": "hsl(206, 16%, 60%)",
          "lightBack": "#fff",
          "lightFore": "#a6b4be",
        },
        "success": Object {
          "back": "hsl(89, 53%, 52%)",
          "darkBack": "#7fbf3b",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#a0d16b",
          "lightFore": "#fff",
        },
        "turquoise": "hsl(168, 76%, 42%)",
        "white": "hsl(0, 100%, 100%)",
        "wisteria": "hsl(282, 44%, 47%)",
      },
    }
  }
>
  <Styled(ToggleButton)
    checked={true}
    disabled={false}
  >
    <ToggleButton
      checked={true}
      className="c0"
      disabled={false}
      onToggle={null}
    >
      <div
        className="c0"
        onClick={[Function]}
      >
        <styled.input
          checked={true}
          readOnly={true}
          type="checkbox"
        >
          <input
            checked={true}
            className="c1"
            readOnly={true}
            type="checkbox"
          />
        </styled.input>
        <styled.span
          checked={true}
          readOnly={false}
        >
          <span
            checked={true}
            className="c2"
            readOnly={false}
          />
        </styled.span>
      </div>
    </ToggleButton>
  </Styled(ToggleButton)>
</ThemeProvider>
`;

exports[`<ToggleButton /> should render without a problem when unchecked and disabled 1`] = `
.c1 {
  position: absolute;
  width: 0;
  opacity: 0;
}

.c2 {
  display: inline-block;
  position: relative;
  width: 3.2rem;
  height: 1.8rem;
  border-radius: 2.1rem;
  background: hsl(218,18%,91%);
  cursor: pointer;
  pointer-events: none;
  opacity: 0.4;
}

.c2:before {
  content: '';
  display: block;
  position: absolute;
  top: 0.1rem;
  left: 0.2rem;
  cursor: pointer;
  height: 1.6rem;
  width: 1.6rem;
  border-radius: 1.6rem;
  background: hsl(0,100%,100%);
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.1),0 0 1px 0 rgba(0,0,0,0.1), 0 0 1px 0 rgba(0,0,0,0.1);
  -webkit-transition: -webkit-transform 250ms ease,width 250ms,left 250ms;
  -webkit-transition: transform 250ms ease,width 250ms,left 250ms;
  transition: transform 250ms ease,width 250ms,left 250ms;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.c0 {
  display: inline-block;
  position: relative;
  height: 1.8rem;
  vertical-align: middle;
  cursor: not-allowed;
}

<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "3.2rem",
          "bigInt": 3.2,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.2rem",
          "mediumInt": 1.2,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "alizarin": "hsl(6, 78%, 57%)",
        "anthracite": "hsl(213, 17%, 20%)",
        "black": "hsl(0, 0%, 0%)",
        "blackLight": "hsl(213, 17%, 20%)",
        "blue": "hsl(200, 74%, 46%)",
        "bodyBackground": "hsl(218, 29%, 95%)",
        "carrot": "hsl(28, 80%, 52%)",
        "clay": "hsl(215, 17%, 26%)",
        "darkBlue": "#1c88bf",
        "darkGray": "#dbdfe6",
        "darkGreen": "#7fbf3b",
        "darkRed": "#ea6151",
        "emerald": "hsl(145, 63%, 49%)",
        "fadeBlue": "hsl(210, 50%, 98%)",
        "failure": Object {
          "back": "hsl(6, 79%, 65%)",
          "darkBack": "#ea6151",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#f1978d",
          "lightFore": "#fff",
        },
        "googleBrandRed": "#ea4335",
        "gray": "hsl(218, 18%, 91%)",
        "green": "hsl(89, 53%, 52%)",
        "grey": "hsl(206, 16%, 60%)",
        "greygoose": "hsl(216, 29%, 97%)",
        "lightBlue": "#3baae2",
        "lightGray": "#fff",
        "lightGreen": "#a0d16b",
        "lightRed": "#f1978d",
        "marble": "hsl(206, 23%, 69%)",
        "orange": "hsl(34, 91%, 65%)",
        "primary": Object {
          "back": "hsl(200, 74%, 46%)",
          "darkBack": "#1c88bf",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#3baae2",
          "lightFore": "#fff",
        },
        "red": "hsl(6, 79%, 65%)",
        "river": "hsl(204, 70%, 53%)",
        "sand": "hsl(214, 8%, 84%)",
        "secondary": Object {
          "back": "hsl(0, 100%, 100%)",
          "darkBack": "#f7f7f7",
          "darkFore": "#8093a3",
          "fore": "hsl(206, 16%, 60%)",
          "lightBack": "#fff",
          "lightFore": "#a6b4be",
        },
        "success": Object {
          "back": "hsl(89, 53%, 52%)",
          "darkBack": "#7fbf3b",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#a0d16b",
          "lightFore": "#fff",
        },
        "turquoise": "hsl(168, 76%, 42%)",
        "white": "hsl(0, 100%, 100%)",
        "wisteria": "hsl(282, 44%, 47%)",
      },
    }
  }
>
  <Styled(ToggleButton)
    checked={false}
    disabled={true}
  >
    <ToggleButton
      checked={false}
      className="c0"
      disabled={true}
      onToggle={null}
    >
      <div
        className="c0"
        onClick={[Function]}
      >
        <styled.input
          checked={false}
          readOnly={true}
          type="checkbox"
        >
          <input
            checked={false}
            className="c1"
            readOnly={true}
            type="checkbox"
          />
        </styled.input>
        <styled.span
          checked={false}
          readOnly={true}
        >
          <span
            checked={false}
            className="c2"
            readOnly={true}
          />
        </styled.span>
      </div>
    </ToggleButton>
  </Styled(ToggleButton)>
</ThemeProvider>
`;

exports[`<ToggleButton /> should render without a problem when unchecked and not disabled 1`] = `
.c1 {
  position: absolute;
  width: 0;
  opacity: 0;
}

.c2 {
  display: inline-block;
  position: relative;
  width: 3.2rem;
  height: 1.8rem;
  border-radius: 2.1rem;
  background: hsl(218,18%,91%);
  cursor: pointer;
  pointer-events: none;
}

.c2:before {
  content: '';
  display: block;
  position: absolute;
  top: 0.1rem;
  left: 0.2rem;
  cursor: pointer;
  height: 1.6rem;
  width: 1.6rem;
  border-radius: 1.6rem;
  background: hsl(0,100%,100%);
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.1),0 0 1px 0 rgba(0,0,0,0.1), 0 0 1px 0 rgba(0,0,0,0.1);
  -webkit-transition: -webkit-transform 250ms ease,width 250ms,left 250ms;
  -webkit-transition: transform 250ms ease,width 250ms,left 250ms;
  transition: transform 250ms ease,width 250ms,left 250ms;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.c2:active:before {
  width: 3rem;
  left: 6px;
}

.c0 {
  display: inline-block;
  position: relative;
  height: 1.8rem;
  vertical-align: middle;
  cursor: pointer;
}

<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "3.2rem",
          "bigInt": 3.2,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.2rem",
          "mediumInt": 1.2,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "alizarin": "hsl(6, 78%, 57%)",
        "anthracite": "hsl(213, 17%, 20%)",
        "black": "hsl(0, 0%, 0%)",
        "blackLight": "hsl(213, 17%, 20%)",
        "blue": "hsl(200, 74%, 46%)",
        "bodyBackground": "hsl(218, 29%, 95%)",
        "carrot": "hsl(28, 80%, 52%)",
        "clay": "hsl(215, 17%, 26%)",
        "darkBlue": "#1c88bf",
        "darkGray": "#dbdfe6",
        "darkGreen": "#7fbf3b",
        "darkRed": "#ea6151",
        "emerald": "hsl(145, 63%, 49%)",
        "fadeBlue": "hsl(210, 50%, 98%)",
        "failure": Object {
          "back": "hsl(6, 79%, 65%)",
          "darkBack": "#ea6151",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#f1978d",
          "lightFore": "#fff",
        },
        "googleBrandRed": "#ea4335",
        "gray": "hsl(218, 18%, 91%)",
        "green": "hsl(89, 53%, 52%)",
        "grey": "hsl(206, 16%, 60%)",
        "greygoose": "hsl(216, 29%, 97%)",
        "lightBlue": "#3baae2",
        "lightGray": "#fff",
        "lightGreen": "#a0d16b",
        "lightRed": "#f1978d",
        "marble": "hsl(206, 23%, 69%)",
        "orange": "hsl(34, 91%, 65%)",
        "primary": Object {
          "back": "hsl(200, 74%, 46%)",
          "darkBack": "#1c88bf",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#3baae2",
          "lightFore": "#fff",
        },
        "red": "hsl(6, 79%, 65%)",
        "river": "hsl(204, 70%, 53%)",
        "sand": "hsl(214, 8%, 84%)",
        "secondary": Object {
          "back": "hsl(0, 100%, 100%)",
          "darkBack": "#f7f7f7",
          "darkFore": "#8093a3",
          "fore": "hsl(206, 16%, 60%)",
          "lightBack": "#fff",
          "lightFore": "#a6b4be",
        },
        "success": Object {
          "back": "hsl(89, 53%, 52%)",
          "darkBack": "#7fbf3b",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#a0d16b",
          "lightFore": "#fff",
        },
        "turquoise": "hsl(168, 76%, 42%)",
        "white": "hsl(0, 100%, 100%)",
        "wisteria": "hsl(282, 44%, 47%)",
      },
    }
  }
>
  <Styled(ToggleButton)
    checked={false}
    disabled={false}
  >
    <ToggleButton
      checked={false}
      className="c0"
      disabled={false}
      onToggle={null}
    >
      <div
        className="c0"
        onClick={[Function]}
      >
        <styled.input
          checked={false}
          readOnly={true}
          type="checkbox"
        >
          <input
            checked={false}
            className="c1"
            readOnly={true}
            type="checkbox"
          />
        </styled.input>
        <styled.span
          checked={false}
          readOnly={false}
        >
          <span
            checked={false}
            className="c2"
            readOnly={false}
          />
        </styled.span>
      </div>
    </ToggleButton>
  </Styled(ToggleButton)>
</ThemeProvider>
`;
